--- a/SoundCatalog/composer.json
+++ b/SoundCatalog/composer.json
@@ -18,6 +18,7 @@
         "mews/captcha": "^3.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
